fixed namings and improved filtering
